Fix alignwide

--- a/css/initialstyles/_general.scss
+++ b/css/initialstyles/_general.scss
@@ -91,8 +91,8 @@ body.logged-out {
 
 @include desktop {
     .full-width-content .entry-content .alignwide {
-        margin-left: -210px;
-        margin-right: -210px;
+        margin-left: -120px;
+        margin-right: -120px;
         max-width: 1200px;
     }
 }
